<resources>
    <string name="app_name">Wally</string>
    <string-array name="CurrencyTypes">
        <item>NEX</item>
        <item>USD</item>
    </string-array>
    <string-array name="FiatCurrencyTypes">
        <item>BRL</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>JPY</item>
        <item>RUB</item>
        <item>USD</item>
        <item>XAU</item>
    </string-array>
    <string name="uBCH">uBCH</string>
    <string name="KEX">KEX</string>
    <string-array name="OneToTen">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="tipPercentage">
        <item>--</item>
        <item>0%</item>
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
        <item>25%</item>
        <item>30%</item>
        <item>50%</item>
    </string-array>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="at">at</string>
    <string name="of">of</string>
    <string name="choose">choose</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="remove">remove</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="removeAll">remove all</string>
    <string name="done">done</string>
    <string name="deny">deny</string>
    <string name="ask">ask</string>
    <string name="badSignature">bad signature</string>
    <string name="unknownCurrency">unknown currency</string>
    <string name="unknownCryptoCurrency">unknown cryptocurrency or blockchain</string>
    <string name="Processing">processing...</string>
    <string name="receiving">receiving</string>
    <string name="sending">sending</string>
    <string name="noAdditionalDetails">no additional details</string>
    <string name="unspecified">unspecified</string>
    <string name="removed">removed</string>
    <string name="synced">ready</string>
    <string name="unsynced">synchronizing</string>
    <string name="connected">connected</string>
    <string name="balance">current balance</string>
    <string name="total">total received</string>
    <string name="WebLoadingPage"><![CDATA[<body><h1><center>...loading...</h1></center></body>]]></string>
    <string name="nothing">nothing</string>
    <string name="empty"></string>
    <string name="or">or</string>
    <string name="onBlockchain">on</string>
    <string name="NotImplemented">Coming Soon</string>
    <string name="NoNodes">No blockchain access</string>
    <string name="cancelled">cancelled</string>
    <string name="pleaseWait">please wait</string>
    <string name="trying">trying</string>
    <string name="clear">clear</string>
    <string name="thousand">thousand</string>
    <string name="million">million</string>
    <string name="version" formatted="false">Wally Wallet Version: %ver</string>
    <string name="enableDeveloperView"> Advanced/developer mode</string>
    <string name="enableIdentityMenu">Enable identity screen</string>
    <string name="enableTricklePayMenu">Enable trickle pay screen</string>
    <string name="enableAssetsMenu">Enable assets screen</string>
    <string name="only">only</string>
    <string name="prefer">prefer</string>
    <string name="rediscoverWalletTx">rediscover all transactions</string>
    <string name="rediscoverBlockchain">rediscover blockchain headers</string>
    <string name="logDebugData">Log Debug Data</string>
    <string name="clearIdentityDomains">Clear Identity Domains</string>
    <string name="rediscoverTooltip">Delete blockchain state and search anew for all transactions relevant to the wallet</string>
    <string name="wordSeed">Account Recovery Secret Phrase</string>
    <string name="deleteWalletAccount">Delete Account</string>
    <string name="SetChangePin">Set or Change unlocking PIN</string>
    <string name="CurrentPin">Current PIN</string>
    <string name="NewPin">New PIN</string>
    <string name="PinChanged">PIN changed</string>
    <string name="PinRemoved">PIN removed</string>
    <string name="PinInvalid">Invalid PIN</string>
    <string name="PinTooShort">new PIN is too short</string>
    <string name="WriteDownRecoveryPhraseWarning">Warning: you have not written down the secret recovery phrases for some accounts!  To ensure funds are not lost if this device is lost or broken, write the secret recovery keys down on paper or other non-electronic format. Recovery keys are accessible within each account\'s settings page.</string>
    <string name="WroteRecoveryPhraseDown">I wrote it down</string>
    <string name="RecoveryPhraseKeepRemindingMe">Keep reminding me</string>
    <string name="ViewRecoveryPhrase">View Account Recovery Secret Phrase</string>
    <string name="localCurrency">Local currency</string>
    <string name="assessUnconfirmed">Assess Unconfirmed Transactions</string>
    <string name="rediscoverNotice">Account rediscover started</string>
    <string name="unconfAssessmentNotice">Unconfirmed assessment started</string>
    <string name="accountDeleteNotice">Account deleted</string>
    <string name="rediscoverConfirmation">Rediscovering an account will search the blockchain since this wallet was created for missing payments.  This process can take a long time.  Only use if you are sure that a payment is missing!</string>
    <string name="rediscoverBlockchainConfirmation">Rediscovering a blockchain will delete all blockchain header data from this wallet and re-download it from full nodes.  This process can take a long time.  Only use if you are sure that there is a blockchain header problem.</string>
    <string name="deleteConfirmation" formatted="false">Deleting an account will make all balances, identities, and history unavailable unless the account is recovered via the account recovery secret phrase!  Only do this if you are ABSOLUTELY SURE!\n\nDelete account "%accountName" (on %blockchain)?</string>
    <string name="reassessConfirmation">This operation will check the blockchain for recent transactions you have sent.  Based on their presence or absence, it will either confirm or erase them.  If transactions are erased, the money will seem to disappear.  You will need to "rediscover" to regain the spent balance.  Do not use if you have recently issued a transaction, since that transaction may be latent in the network, waiting for confirmation.</string>
    <string name="recoveryPhrase">This 12 word phrase can be used to restore your wallet if your phone is damaged or lost.  This means that whoever possesses this phrase can spend your money.  Write it down on paper and store it securely!</string>
    <string name="primaryAccountConfirmation">Your primary account is the account that is used for your identity and to make automatic payments.  It also is the first account shown in various places in this app.  It must be on the Nexa blockchain.</string>
    <string name="AccountActions">Account Actions</string>
    <string name="GeneralSettings">General Settings</string>
    <string name="BlockchainSettings">Blockchain Sources</string>
    <string name="AccessPriceData">Access Price Data</string>
    <string name="SplitBillDescription">You pay the bill (in fiat), your friends pay you their portion via the QR code below</string>
    <string name="Total">Total:</string>
    <string name="Ways">Ways:</string>
    <string name="Tip">Tip:</string>
    <string name="Amount">Amount:</string>
    <string name="balanceOnTheDate">as of %date</string>
    <string name="goodQR">QR readable</string>
    <string name="badQR">QR unreadable</string>
    <string name="badImageQR">bad image QR. more...</string>
    <string name="badImageQRhelp">Try taking a picture from farther away if you took a close up of the QR code.  The white border is part of the QR code, and you can get confusing moire patterns if photographing a screen up close.</string>
    <string name="unlock">unlock</string>
    <string name="share">share</string>
    <string name="Send">Send</string>
    <string name="OpenSend">Send</string>
    <string name="SendCancel">Cancel</string>
    <string name="ignoredInsecureRequest">Ignored Insecure Request</string>
    <string name="fromAccountColon">Send from account:</string>
    <string name="chooseAccountError">choose an account</string>
    <string name="toColon">To:</string>
    <string name="fromColon">From:</string>
    <string name="Receive">Receive into account</string>
    <string name="AccountListHeader">Accounts</string>
    <string name="Address">Address</string>
    <string name="clipboard">clipboard</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="invalidQuantity">invalid quantity</string>
    <string name="invalidQuantityTooManyDecimalDigits">too many decimal places</string>
    <string name="roundedUpClickSendAgain">rounded up, press send again to accept</string>
    <string name="emptyQuantityField"></string>
    <string name="purchase">purchase</string>
    <string name="txHistoryButton">View or Export Account Activity</string>
    <string name="setAsPrimaryAccountButton">Make this your Primary Account</string>
    <string name="AccountStatistics">Account Statistics</string>
    <string name="AccountBlockchainSync">Currently %sync on blockchain %chain.</string>
    <string name="AccountBlockchainDetails">At %actBlockDate, block %actBlock of %chainBlockCount.</string>
    <string name="AccountBlockchainConnectionDetails">Connected to %num nodes: %names</string>
    <string name="AccountNumAddresses">%num addresses</string>
    <string name="FirstLastReceive">First deposit in block %first, most recent in block %last.</string>
    <string name="FirstLastSend">First withdraw in block %first, most recent in block %last.</string>
    <string name="AccountNumTx">%num transactions</string>
    <string name="AccountNumUtxos">%num ledger entries</string>
    <string name="title_activity_invoices">Invoices</string>
    <string name="PinHidesAccount">Hide account until PIN is entered?</string>
    <string name="title_activity_exchange">Exchange</string>
    <string name="title_activity_trickle_pay">Trickle Pay</string>
    <string name="title_home">Home</string>
    <string name="title_activity_identity">Identity</string>
    <string name="next">Next</string>
    <string name="welcome1Label">Welcome</string>
    <string name="welcome2_title">NEXA Account Setup</string>
    <string name="welcome3_title">NEXA Account Recovery Secret Phrase</string>
    <string name="welcome3">This account can be restored or moved to another device via the secret phrase displayed below.  Unlike many services, a this wallet does not need a periodic "backup".  The data in the public blockchain, combined with this secret phrase is enough to recover all your funds and your account history.    Write this phrase down and keep it somewhere secure right now.\n\nIn Bitcoin, YOU must take responsibility!\n\nIf you lose this phrase it is absolutely impossible to recover your account.  If your secret phrase is stolen from you, the thief can take all your funds and log in to sites as you that you have set up with Wally\'s identity feature.\nThis may sound scary, but it has a big advantage: your money is on this phone and in your backup and nowhere else.\n\nSo it is yours and only yours.  No one can hack some corporate database and steal your money and no one can interfere with you spending your money.\n\nJust like money in your physical wallet.\n\nIf this responsibility is scary to you, treat this wallet like you would your physical wallet -- don\'t keep much money in it.</string>
    <string name="welcome4_title">Identity</string>
</resources>