<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_home"/>
    <item
            android:id="@+id/navigation_identity"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_activity_identity"/>

    <item
            android:id="@+id/navigation_trickle_pay"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_activity_trickle_pay"/>
    <item
            android:id="@+id/navigation_exchange"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_activity_exchange"/>

    <item
            android:id="@+id/navigation_invoices"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_activity_invoices"/>
    <!--
    <item
            android:id="@+id/navigation_identity"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_activity_identity"/>
            -->

</menu>
