<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".settings" android:tooltipText="@string/rediscoverTooltip"
        android:onClick="onRediscoverBlockchain">

    <TextView
        android:id="@+id/LocalCurrencyText"
        android:layout_width="179dp"
        android:layout_height="28dp"
        android:layout_marginTop="64dp"
        android:text="@string/localCurrency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/fiatCurrencySpinner"
        android:layout_width="187dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:entries="@array/FiatCurrencyTypes"
        app:layout_constraintBottom_toBottomOf="@+id/LocalCurrencyText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/LocalCurrencyText"
        app:layout_constraintTop_toTopOf="@+id/LocalCurrencyText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Rediscover"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:onClick="onRediscoverBlockchain"
        android:text="@string/rediscoverWalletTx"
        app:layout_constraintEnd_toEndOf="@+id/DeleteWalletButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/DeleteWalletButton"
        app:layout_constraintTop_toBottomOf="@+id/DeleteWalletButton" />

    <TextView
        android:id="@+id/wordSeed"
        android:layout_width="388dp"
        android:layout_height="209dp"
        android:layout_marginTop="8dp"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/wordSeedTitle"
        app:layout_constraintTop_toBottomOf="@+id/wordSeedTitle" />

    <TextView
        android:id="@+id/wordSeedTitle"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:text="@string/wordSeed"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LocalCurrencyText"
        app:layout_constraintTop_toBottomOf="@+id/LocalCurrencyText" />

    <Button
        android:id="@+id/DumpInterestingData"
        android:layout_width="141dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onLogDebugData"
        android:text="@string/logDebugData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/DeleteWalletButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:onClick="onDeleteAccountButton"
        android:text="@string/deleteWalletAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordSeed" />

    <Spinner
        android:id="@+id/deleteWalletAccountChoice"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/Rediscover"
        app:layout_constraintStart_toEndOf="@+id/DeleteWalletButton"
        app:layout_constraintTop_toTopOf="@+id/DeleteWalletButton" />
</androidx.constraintlayout.widget.ConstraintLayout>